Log 26/12/18a - Add log update function

--- a/workspace.ipynb
+++ b/workspace.ipynb
@@ -47,19 +47,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "# Import Packages\n",
-    "import tensorflow as tf\n",
+    "import os\n",
     "import torch\n",
     "import torch.nn as nn\n",
     "import torchvision\n",
-    "from torchvision import transforms\n",
-    "from logger import Logger\n",
     "\n",
     "# Import Network Architectures\n",
     "from DNN import DNN, train_dnn_model\n",
@@ -68,14 +66,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Torch Device: Local CPU\n"
+      "Torch Device: Local CPU\n",
+      "Deleted Old Existing Log Directory\n"
      ]
     }
    ],
@@ -86,6 +85,16 @@
     "    print(\"Torch Device: {}\".format(torch.cuda.get_device_name(0)))\n",
     "else:\n",
     "    print(\"Torch Device: Local CPU\")\n",
+    "    \n",
+    "# Remove files in log dir\n",
+    "if not os.path.exists(os.getcwd() + \"/logs\"):\n",
+    "    os.makedirs(directory)\n",
+    "    print(\"Created New Log Directory\")\n",
+    "else:\n",
+    "    filelist = [ f for f in os.listdir(os.getcwd() + \"/logs\") if f.endswith(\".bak\") ]\n",
+    "    for f in filelist:\n",
+    "        os.remove(os.path.join(mydir, f))\n",
+    "    print(\"Deleted Old Files in Existing Log Directory\")\n",
     "\n",
     "# Define batchsize for data-loading\n",
     "batch_size = 100"
@@ -180,36 +189,36 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch [1/5], Step [100/600], Loss: 0.4428, Train Acc: 0.83, Test Acc: 0.90\n",
-      "Epoch [1/5], Step [200/600], Loss: 0.2129, Train Acc: 0.94, Test Acc: 0.93\n",
-      "Epoch [1/5], Step [300/600], Loss: 0.2204, Train Acc: 0.92, Test Acc: 0.94\n",
-      "Epoch [1/5], Step [400/600], Loss: 0.1562, Train Acc: 0.93, Test Acc: 0.94\n",
-      "Epoch [1/5], Step [500/600], Loss: 0.1789, Train Acc: 0.94, Test Acc: 0.95\n",
-      "Epoch [1/5], Step [600/600], Loss: 0.1273, Train Acc: 0.96, Test Acc: 0.96\n",
-      "Epoch [2/5], Step [100/600], Loss: 0.1527, Train Acc: 0.94, Test Acc: 0.96\n",
-      "Epoch [2/5], Step [200/600], Loss: 0.0656, Train Acc: 0.97, Test Acc: 0.96\n",
-      "Epoch [2/5], Step [300/600], Loss: 0.0482, Train Acc: 0.98, Test Acc: 0.97\n",
-      "Epoch [2/5], Step [400/600], Loss: 0.1163, Train Acc: 0.96, Test Acc: 0.97\n",
-      "Epoch [2/5], Step [500/600], Loss: 0.1228, Train Acc: 0.97, Test Acc: 0.97\n",
-      "Epoch [2/5], Step [600/600], Loss: 0.0571, Train Acc: 0.98, Test Acc: 0.97\n",
-      "Epoch [3/5], Step [100/600], Loss: 0.0403, Train Acc: 0.99, Test Acc: 0.97\n",
-      "Epoch [3/5], Step [200/600], Loss: 0.1210, Train Acc: 0.96, Test Acc: 0.97\n",
-      "Epoch [3/5], Step [300/600], Loss: 0.1137, Train Acc: 0.97, Test Acc: 0.97\n",
-      "Epoch [3/5], Step [400/600], Loss: 0.0892, Train Acc: 0.98, Test Acc: 0.97\n",
-      "Epoch [3/5], Step [500/600], Loss: 0.0420, Train Acc: 0.99, Test Acc: 0.97\n",
-      "Epoch [3/5], Step [600/600], Loss: 0.0621, Train Acc: 0.98, Test Acc: 0.97\n",
-      "Epoch [4/5], Step [100/600], Loss: 0.0363, Train Acc: 1.00, Test Acc: 0.98\n",
-      "Epoch [4/5], Step [200/600], Loss: 0.1273, Train Acc: 0.94, Test Acc: 0.97\n",
-      "Epoch [4/5], Step [300/600], Loss: 0.0299, Train Acc: 1.00, Test Acc: 0.98\n",
-      "Epoch [4/5], Step [400/600], Loss: 0.0118, Train Acc: 1.00, Test Acc: 0.97\n",
-      "Epoch [4/5], Step [500/600], Loss: 0.0391, Train Acc: 0.99, Test Acc: 0.98\n",
-      "Epoch [4/5], Step [600/600], Loss: 0.0477, Train Acc: 0.99, Test Acc: 0.98\n",
-      "Epoch [5/5], Step [100/600], Loss: 0.0300, Train Acc: 0.99, Test Acc: 0.98\n",
-      "Epoch [5/5], Step [200/600], Loss: 0.0366, Train Acc: 0.99, Test Acc: 0.98\n",
-      "Epoch [5/5], Step [300/600], Loss: 0.0733, Train Acc: 0.98, Test Acc: 0.98\n",
-      "Epoch [5/5], Step [400/600], Loss: 0.0541, Train Acc: 0.98, Test Acc: 0.98\n",
-      "Epoch [5/5], Step [500/600], Loss: 0.0139, Train Acc: 1.00, Test Acc: 0.98\n",
-      "Epoch [5/5], Step [600/600], Loss: 0.0663, Train Acc: 0.98, Test Acc: 0.98\n"
+      "Epoch [1/5], Step [100/600], Loss: 0.3048, Train Acc: 0.92, Test Acc: 0.91\n",
+      "Epoch [1/5], Step [200/600], Loss: 0.2679, Train Acc: 0.93, Test Acc: 0.93\n",
+      "Epoch [1/5], Step [300/600], Loss: 0.2407, Train Acc: 0.94, Test Acc: 0.93\n",
+      "Epoch [1/5], Step [400/600], Loss: 0.4094, Train Acc: 0.89, Test Acc: 0.94\n",
+      "Epoch [1/5], Step [500/600], Loss: 0.1167, Train Acc: 0.97, Test Acc: 0.95\n",
+      "Epoch [1/5], Step [600/600], Loss: 0.1576, Train Acc: 0.96, Test Acc: 0.96\n",
+      "Epoch [2/5], Step [100/600], Loss: 0.2267, Train Acc: 0.93, Test Acc: 0.96\n",
+      "Epoch [2/5], Step [200/600], Loss: 0.1853, Train Acc: 0.91, Test Acc: 0.96\n",
+      "Epoch [2/5], Step [300/600], Loss: 0.0985, Train Acc: 0.96, Test Acc: 0.97\n",
+      "Epoch [2/5], Step [400/600], Loss: 0.2166, Train Acc: 0.94, Test Acc: 0.97\n",
+      "Epoch [2/5], Step [500/600], Loss: 0.0719, Train Acc: 0.98, Test Acc: 0.97\n",
+      "Epoch [2/5], Step [600/600], Loss: 0.1051, Train Acc: 0.95, Test Acc: 0.97\n",
+      "Epoch [3/5], Step [100/600], Loss: 0.0537, Train Acc: 0.99, Test Acc: 0.97\n",
+      "Epoch [3/5], Step [200/600], Loss: 0.0372, Train Acc: 0.99, Test Acc: 0.97\n",
+      "Epoch [3/5], Step [300/600], Loss: 0.0430, Train Acc: 0.99, Test Acc: 0.97\n",
+      "Epoch [3/5], Step [400/600], Loss: 0.1539, Train Acc: 0.96, Test Acc: 0.97\n",
+      "Epoch [3/5], Step [500/600], Loss: 0.0467, Train Acc: 1.00, Test Acc: 0.97\n",
+      "Epoch [3/5], Step [600/600], Loss: 0.0884, Train Acc: 0.97, Test Acc: 0.97\n",
+      "Epoch [4/5], Step [100/600], Loss: 0.0328, Train Acc: 0.99, Test Acc: 0.98\n",
+      "Epoch [4/5], Step [200/600], Loss: 0.0277, Train Acc: 1.00, Test Acc: 0.97\n",
+      "Epoch [4/5], Step [300/600], Loss: 0.0480, Train Acc: 0.99, Test Acc: 0.98\n",
+      "Epoch [4/5], Step [400/600], Loss: 0.0721, Train Acc: 0.99, Test Acc: 0.98\n",
+      "Epoch [4/5], Step [500/600], Loss: 0.0388, Train Acc: 0.99, Test Acc: 0.98\n",
+      "Epoch [4/5], Step [600/600], Loss: 0.0229, Train Acc: 1.00, Test Acc: 0.97\n",
+      "Epoch [5/5], Step [100/600], Loss: 0.0255, Train Acc: 1.00, Test Acc: 0.98\n",
+      "Epoch [5/5], Step [200/600], Loss: 0.0325, Train Acc: 1.00, Test Acc: 0.98\n",
+      "Epoch [5/5], Step [300/600], Loss: 0.0519, Train Acc: 0.98, Test Acc: 0.98\n",
+      "Epoch [5/5], Step [400/600], Loss: 0.0070, Train Acc: 1.00, Test Acc: 0.98\n",
+      "Epoch [5/5], Step [500/600], Loss: 0.0326, Train Acc: 0.99, Test Acc: 0.98\n",
+      "Epoch [5/5], Step [600/600], Loss: 0.0279, Train Acc: 0.98, Test Acc: 0.98\n"
      ]
     }
    ],
@@ -275,48 +284,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch [1/5], Step [100/600], Loss: 0.1153, Train Acc: 0.97, Test Acc: 0.95\n",
-      "Epoch [1/5], Step [200/600], Loss: 0.0808, Train Acc: 0.98, Test Acc: 0.97\n",
-      "Epoch [1/5], Step [300/600], Loss: 0.1376, Train Acc: 0.96, Test Acc: 0.98\n",
-      "Epoch [1/5], Step [400/600], Loss: 0.0814, Train Acc: 0.97, Test Acc: 0.98\n",
-      "Epoch [1/5], Step [500/600], Loss: 0.0426, Train Acc: 0.99, Test Acc: 0.98\n",
-      "Epoch [1/5], Step [600/600], Loss: 0.0515, Train Acc: 0.99, Test Acc: 0.98\n",
-      "Epoch [2/5], Step [100/600], Loss: 0.1729, Train Acc: 0.98, Test Acc: 0.98\n",
-      "Epoch [2/5], Step [200/600], Loss: 0.0349, Train Acc: 0.99, Test Acc: 0.98\n",
-      "Epoch [2/5], Step [300/600], Loss: 0.0582, Train Acc: 0.98, Test Acc: 0.99\n",
-      "Epoch [2/5], Step [400/600], Loss: 0.1028, Train Acc: 0.98, Test Acc: 0.98\n",
-      "Epoch [2/5], Step [500/600], Loss: 0.0342, Train Acc: 0.98, Test Acc: 0.99\n",
-      "Epoch [2/5], Step [600/600], Loss: 0.0109, Train Acc: 1.00, Test Acc: 0.99\n",
-      "Epoch [3/5], Step [100/600], Loss: 0.0645, Train Acc: 0.97, Test Acc: 0.98\n",
-      "Epoch [3/5], Step [200/600], Loss: 0.0388, Train Acc: 0.98, Test Acc: 0.99\n",
-      "Epoch [3/5], Step [300/600], Loss: 0.0114, Train Acc: 1.00, Test Acc: 0.99\n",
-      "Epoch [3/5], Step [400/600], Loss: 0.0196, Train Acc: 1.00, Test Acc: 0.99\n",
-      "Epoch [3/5], Step [500/600], Loss: 0.0378, Train Acc: 0.98, Test Acc: 0.99\n",
-      "Epoch [3/5], Step [600/600], Loss: 0.0360, Train Acc: 0.99, Test Acc: 0.99\n",
-      "Epoch [4/5], Step [100/600], Loss: 0.0129, Train Acc: 1.00, Test Acc: 0.99\n",
-      "Epoch [4/5], Step [200/600], Loss: 0.0169, Train Acc: 1.00, Test Acc: 0.99\n",
-      "Epoch [4/5], Step [300/600], Loss: 0.0571, Train Acc: 0.99, Test Acc: 0.99\n",
-      "Epoch [4/5], Step [400/600], Loss: 0.0137, Train Acc: 0.99, Test Acc: 0.99\n",
-      "Epoch [4/5], Step [500/600], Loss: 0.0871, Train Acc: 0.98, Test Acc: 0.98\n",
-      "Epoch [4/5], Step [600/600], Loss: 0.0277, Train Acc: 0.99, Test Acc: 0.99\n",
-      "Epoch [5/5], Step [100/600], Loss: 0.0112, Train Acc: 1.00, Test Acc: 0.99\n",
-      "Epoch [5/5], Step [200/600], Loss: 0.0047, Train Acc: 1.00, Test Acc: 0.99\n",
-      "Epoch [5/5], Step [300/600], Loss: 0.0140, Train Acc: 1.00, Test Acc: 0.99\n",
-      "Epoch [5/5], Step [400/600], Loss: 0.0080, Train Acc: 1.00, Test Acc: 0.99\n"
+      "Epoch [1/5], Step [100/600], Loss: 0.1264, Train Acc: 0.99, Test Acc: 0.96\n"
      ]
     },
     {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
+     "ename": "NameError",
+     "evalue": "global name 'update_logger' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
       "\u001b[0;32m<ipython-input-9-dffff53645a2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m                 \u001b[0mdevice\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moptimizer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcriterion\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m                 \u001b[0mmodel_fname\u001b[0m \u001b[0;34m=\u001b[0m\u001b[0;34m\"models/temp_model_cnn.ckpt\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m                 verbose=True, logging=True)\n\u001b[0m",
-      "\u001b[0;32m/Users/rtl/Dropbox/PHD_ECN/COURSES/WiSe_2018_Models_of_Neural_Systems/PROJECT/CODE/CNN.py\u001b[0m in \u001b[0;36mtrain_cnn_model\u001b[0;34m(model, num_epochs, train_loader, test_loader, device, optimizer, criterion, model_fname, verbose, logging)\u001b[0m\n\u001b[1;32m     58\u001b[0m             \u001b[0;31m# Backward and optimize\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     59\u001b[0m             \u001b[0moptimizer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mzero_grad\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 60\u001b[0;31m             \u001b[0mloss\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     61\u001b[0m             \u001b[0moptimizer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     62\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/Users/rtl/anaconda2/envs/mns-project/lib/python2.7/site-packages/torch/tensor.pyc\u001b[0m in \u001b[0;36mbackward\u001b[0;34m(self, gradient, retain_graph, create_graph)\u001b[0m\n\u001b[1;32m    100\u001b[0m                 \u001b[0mproducts\u001b[0m\u001b[0;34m.\u001b[0m \u001b[0mDefaults\u001b[0m \u001b[0mto\u001b[0m \u001b[0;34m`\u001b[0m\u001b[0;34m`\u001b[0m\u001b[0mFalse\u001b[0m\u001b[0;34m`\u001b[0m\u001b[0;34m`\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    101\u001b[0m         \"\"\"\n\u001b[0;32m--> 102\u001b[0;31m         \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mautograd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgradient\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mretain_graph\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcreate_graph\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    103\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    104\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mregister_hook\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhook\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/Users/rtl/anaconda2/envs/mns-project/lib/python2.7/site-packages/torch/autograd/__init__.pyc\u001b[0m in \u001b[0;36mbackward\u001b[0;34m(tensors, grad_tensors, retain_graph, create_graph, grad_variables)\u001b[0m\n\u001b[1;32m     88\u001b[0m     Variable._execution_engine.run_backward(\n\u001b[1;32m     89\u001b[0m         \u001b[0mtensors\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgrad_tensors\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mretain_graph\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcreate_graph\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 90\u001b[0;31m         allow_unreachable=True)  # allow_unreachable flag\n\u001b[0m\u001b[1;32m     91\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     92\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+      "\u001b[0;32m/Users/rtl/Dropbox/PHD_ECN/COURSES/WiSe_2018_Models_of_Neural_Systems/PROJECT/CODE/CNN.py\u001b[0m in \u001b[0;36mtrain_cnn_model\u001b[0;34m(model, num_epochs, train_loader, test_loader, device, optimizer, criterion, model_fname, verbose, logging)\u001b[0m\n\u001b[1;32m     92\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     93\u001b[0m                 \u001b[0;32mif\u001b[0m \u001b[0mlogging\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 94\u001b[0;31m                     update_logger(logger, epoch, i, loss, accuracy, model,\n\u001b[0m\u001b[1;32m     95\u001b[0m                                   images, train_loader)\n\u001b[1;32m     96\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: global name 'update_logger' is not defined"
      ]
     }
    ],
@@ -326,6 +306,15 @@
     "                device, optimizer, criterion,\n",
     "                model_fname =\"models/temp_model_cnn.ckpt\",\n",
     "                verbose=True, logging=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "## Guergiev et al (2017)"
    ]
   },
   {
