Log 27/12/18b - Changed pipeline to cv friendly

--- a/workspace.ipynb
+++ b/workspace.ipynb
@@ -176,14 +176,14 @@
     "learning_rate = 0.001\n",
     "\n",
     "# Instantiate the model with layersizes, Loss fct, optimizer\n",
-    "dnn_model = DNN(h_sizes, out_size).to(device)\n",
+    "dnn_model = DNN(h_sizes, out_size)\n",
     "criterion = nn.CrossEntropyLoss()\n",
     "optimizer = torch.optim.Adam(dnn_model.parameters(), lr=learning_rate)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +199,27 @@
       "Epoch [2/5], Step [100/600], Loss: 0.1042, Train Acc: 0.97, Test Acc: 0.96\n",
       "Epoch [2/5], Step [200/600], Loss: 0.0833, Train Acc: 0.99, Test Acc: 0.97\n",
       "Epoch [2/5], Step [300/600], Loss: 0.1355, Train Acc: 0.95, Test Acc: 0.97\n",
-      "Epoch [2/5], Step [400/600], Loss: 0.1126, Train Acc: 0.95, Test Acc: 0.97\n"
+      "Epoch [2/5], Step [400/600], Loss: 0.1126, Train Acc: 0.95, Test Acc: 0.97\n",
+      "Epoch [2/5], Step [500/600], Loss: 0.0444, Train Acc: 0.99, Test Acc: 0.97\n",
+      "Epoch [2/5], Step [600/600], Loss: 0.1419, Train Acc: 0.96, Test Acc: 0.97\n",
+      "Epoch [3/5], Step [100/600], Loss: 0.1147, Train Acc: 0.97, Test Acc: 0.97\n",
+      "Epoch [3/5], Step [200/600], Loss: 0.0742, Train Acc: 0.99, Test Acc: 0.97\n",
+      "Epoch [3/5], Step [300/600], Loss: 0.0802, Train Acc: 0.98, Test Acc: 0.97\n",
+      "Epoch [3/5], Step [400/600], Loss: 0.0544, Train Acc: 0.97, Test Acc: 0.97\n",
+      "Epoch [3/5], Step [500/600], Loss: 0.0609, Train Acc: 0.98, Test Acc: 0.98\n",
+      "Epoch [3/5], Step [600/600], Loss: 0.0742, Train Acc: 0.98, Test Acc: 0.97\n",
+      "Epoch [4/5], Step [100/600], Loss: 0.0570, Train Acc: 0.99, Test Acc: 0.97\n",
+      "Epoch [4/5], Step [200/600], Loss: 0.0232, Train Acc: 1.00, Test Acc: 0.98\n",
+      "Epoch [4/5], Step [300/600], Loss: 0.0376, Train Acc: 0.99, Test Acc: 0.98\n",
+      "Epoch [4/5], Step [400/600], Loss: 0.0309, Train Acc: 1.00, Test Acc: 0.98\n",
+      "Epoch [4/5], Step [500/600], Loss: 0.1531, Train Acc: 0.94, Test Acc: 0.98\n",
+      "Epoch [4/5], Step [600/600], Loss: 0.0290, Train Acc: 0.98, Test Acc: 0.98\n",
+      "Epoch [5/5], Step [100/600], Loss: 0.0487, Train Acc: 0.98, Test Acc: 0.98\n",
+      "Epoch [5/5], Step [200/600], Loss: 0.0293, Train Acc: 0.98, Test Acc: 0.98\n",
+      "Epoch [5/5], Step [300/600], Loss: 0.0584, Train Acc: 0.97, Test Acc: 0.98\n",
+      "Epoch [5/5], Step [400/600], Loss: 0.0144, Train Acc: 1.00, Test Acc: 0.98\n",
+      "Epoch [5/5], Step [500/600], Loss: 0.0110, Train Acc: 1.00, Test Acc: 0.98\n",
+      "Epoch [5/5], Step [600/600], Loss: 0.0267, Train Acc: 0.98, Test Acc: 0.98\n"
      ]
     }
    ],
@@ -246,7 +266,7 @@
     "\n",
     "# Instantiate the model with layersizes, Loss fct, optimizer\n",
     "cnn_model = CNN(ch_sizes, k_sizes,\n",
-    "                stride, padding, out_size).to(device)\n",
+    "                stride, padding, out_size)\n",
     "criterion = nn.CrossEntropyLoss()\n",
     "optimizer = torch.optim.Adam(cnn_model.parameters(), lr=learning_rate)"
    ]
