--- a/workspace.ipynb
+++ b/workspace.ipynb
@@ -111,8 +111,11 @@
    ],
    "source": [
     "data_dir = \"/Users/rtl/Dropbox/DATASETS\"\n",
+    "if not os.path.exists(data_dir):\n",
+    "    os.makedirs(data_dir)\n",
+    "    print(\"Created New Data Directory\")\n",
     "\n",
-    "# Remove files in log dir\n",
+    "# Create Log Directory or remove tensorboard log files in log dir\n",
     "log_dir = os.getcwd() + \"/logs\"\n",
     "if not os.path.exists(log_dir):\n",
     "    os.makedirs(log_dir)\n",
@@ -151,7 +154,7 @@
    "outputs": [],
    "source": [
     "# MNIST dataset\n",
-    "X, y = get_data(num_samples=70000)\n",
+    "X, y = get_data(num_samples=70000, dataset=\"MNIST\")\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y,\n",
     "                                                    stratify=y,\n",
     "                                                    random_state=0)"
