--- a/report/main.bib
+++ b/report/main.bib
@@ -1,3 +1,20 @@
+@article{lee2015,
+  author    = {Dong{-}Hyun Lee and
+               Saizheng Zhang and
+               Antoine Biard and
+               Yoshua Bengio},
+  title     = {Target Propagation},
+  journal   = {CoRR},
+  volume    = {abs/1412.7525},
+  year      = {2014},
+  url       = {http://arxiv.org/abs/1412.7525},
+  archivePrefix = {arXiv},
+  eprint    = {1412.7525},
+  timestamp = {Mon, 13 Aug 2018 16:46:59 +0200},
+  biburl    = {https://dblp.org/rec/bib/journals/corr/LeeZBB14},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
 @inproceedings{sacramento2018,
   title={Dendritic cortical microcircuits approximate the backpropagation algorithm},
   author={Sacramento, Jo{\~a}o and Costa, Rui Ponte and Bengio, Yoshua and Senn, Walter},
